#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT([pem], [0.7.6], [pj.pandit@yahoo.co.in])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([pem.pl])
AC_CONFIG_HEADER([config.h])

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
