#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
#
# configure.ac: This is a base file to generate configure script for `pem'.
# This file is part of the `pem' project version 0.7.8
# Copyright (C) 2007 2008 2009 Prasad J Pandit
#
# `pem' is a free software; you can redistribute it and/or modify it under
# the terms of GNU General Public License as published by the Free software
# Foundation; either version 3 of the license, or(at your option) any later
# version.
#
# `pem' is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
# details.
#
# You should have received a copy of the GNU General Public License along
# with `pem'; if not, see: <http://www.gnu.org/licenses>.
#

AC_PREREQ(2.61)
AC_INIT([pem], [0.7.8], [pj.pandit@yahoo.co.in])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([pem.pl])
AC_CONFIG_HEADER([config.h])

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
